changed into span

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             developer. ”
           </p>
           <div class="name-title">
-            <div class="name">John Tarkpor</div>
-            <div class="title">Junior Front-end Developer</div>
+            <span class="name">John Tarkpor</span>
+            <span class="title">Junior Front-end Developer</span>
           </div>
         </div>
         <div class="image-container">
